--- a/ubakip/ubakip.csproj
+++ b/ubakip/ubakip.csproj
@@ -226,6 +226,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
+    <Content Include="Content\Images\Cartoon_Cloud1.svg.png" />
+    <Content Include="Content\Images\stampTiles.svg" />
     <Content Include="Content\Rating.css" />
     <Content Include="Content\Images\medal.png" />
     <Content Include="Content\rzslider.min.css" />
